--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -56,23 +56,10 @@
     --color-body-light: #f8f9fa;
     --color-body-dark: #121212;
 
-    --color-text-light: oklch(0.278 0.033 256.848);
-    /*!*--color-text-dark: oklch(0.928 0.006 264.531);*!*/
-    --color-nav-ligth: oklch(0.809 0.105 251.813);
-    --color-nav-dark: oklch(0.424 0.199 265.638);
-    /**/
-    --color-hover-light: oklch(0.882 0.059 254.128);
-    --color-hover-dark: oklch(0.546 0.245 262.881);
-    /**/
-    --color-hover-text-light: oklch(0.282 0.091 267.935);
-    --color-hover-text-dark: #fff;
     /**/
     --font-logo: "Orbitron", sans-serif;
     --font-base: "FiraCode", sans-serif;
-    /**/
-    --color-button: oklch(0.623 0.214 259.815);
-    --color-hover-button: oklch(0.546 0.245 262.881);
-    /**/
+
     --animate-bounce: bounce 1s ease-in-out 10 forwards;
     @keyframes bounce {
         0%, 100% {
@@ -101,7 +88,7 @@ h1 {
 }
 
 .theme-toggle {
-    @apply absolute top-1/12 right-1/12 text-warning dark:text-warning-dark
+    @apply absolute top-9 right-12 text-warning dark:text-warning-dark
     transform transition duration-200 ease-in-out
     hover:scale-120 active:rotate-360;
 }
@@ -110,15 +97,17 @@ h1 {
 .btn-submit {
     @apply w-full p-3 text-text-dark font-semibold rounded-lg
     bg-primary dark:bg-primary-dark
-    hover:bg-primary-dark dark:hover:bg-primary transition-colors duration-300 active:scale-95
+    hover:bg-primary-dark dark:hover:bg-primary
+    transition-colors duration-300 active:scale-95
     focus:outline-none focus:ring-3 focus:ring-primary/50 dark:focus:ring-primary;
 }
 
 .btn-cancel {
-    @apply w-50 p-3 text-text-light dark:text-text-dark
-    bg-red-400 dark:bg-red-600 hover:bg-red-900
-    rounded-lg font-semibold transition-colors
-    duration-300 active:scale-95;
+    @apply w-full p-3 text-text-dark font-semibold rounded-lg
+    bg-error dark:bg-error-dark
+    hover:bg-error-dark dark:hover:bg-error
+    transition-colors duration-300 active:scale-95
+    focus:outline-none focus:ring-3 focus:ring-error/50 dark:focus:ring-error;
 }
 
 .correct_label {
@@ -132,7 +121,7 @@ h1 {
 .correct_input {
     @apply rounded-lg transition-all
     border border-form-color dark:border-form-color-dark
-    text-text-light dark:text-text-dark
+    text-text dark:text-text-dark
     bg-background dark:bg-background-dark
     focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-primary-dark
     placeholder:text-secondary dark:placeholder:text-secondary-dark
@@ -190,6 +179,46 @@ h1 {
     animation: fade-in 1.5s ease-in-out forwards;
     animation-delay: 0.2s; /* небольшая задержка перед началом анимации */
 }
+
+
+@keyframes fade-in-out {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    50% {
+        opacity: 0.5;
+        transform: translateY(-5px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+.animate-popup {
+    animation: fade-in-out 1s linear forwards;
+}
+
+@keyframes fade-in-out-reverse {
+    0% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    50% {
+        opacity: 0.5;
+        transform: translateY(-5px);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+}
+
+.animate-popup-reverse {
+    animation: fade-in-out-reverse 1s linear forwards;
+}
+
 
 
 
