--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -8,35 +8,57 @@
 {% block body %}
     <main class="flex justify-center items-center min-h-screen py-6">
         <form method="POST" id="registration-form" action="{% url 'myauth:registration' %}"
-              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg shadow-nav-ligth/50 dark:shadow-nav-dark:50 w-full max-w-md space-y-6 overflow-y-auto opacity-0 animate-fade-in">
+              class="relative form-style opacity-0 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
             <button id="theme-toggle" type="button" class="theme-toggle">
                 <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hidden">
+                     stroke-width="1.5" stroke="currentColor" class="w-8 h-8 hidden">
                     <path stroke-linecap="round" stroke-linejoin="round"
                           d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
                 </svg>
-                <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none"
+                <svg id="theme-toggle-light-icon" class="w-8 h-8 hidden" xmlns="http://www.w3.org/2000/svg" fill="none"
                      viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round"
                           d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
                 </svg>
             </button>
-
-            <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
+            <h1>Lazy Ilya</h1>
+            <p class="text-center text-text dark:text-white">Регистрация в приложении</p>
 
             <div>
                 <label for="username-input"
-                       class="block mb-2 text-sm font-medium correct_label"
+                       class="block mb-2 font-medium correct_label"
                        id="username-label">
-                    Логин
+                    <div class="flex items-center justify-between">
+                        <span>Логин</span>
+                        <div class="relative group">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 fill="none" viewBox="0 0 24 24"
+                                 stroke-width="1.5" stroke="currentColor"
+                                 class="size-6 correct_icon cursor-pointer">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0
+                     1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442
+                     -.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0
+                     9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"></path>
+                            </svg>
+                            <!-- Tooltip -->
+                            <div
+                                    class="absolute right-0 bottom-full mb-1 w-sm whitespace-normal p-2 text-justify text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-300 z-10">
+                                <span>Используйте логин одним словом на любом языке,
+                                    можно использовать только буквы, цифры и знаки @/./+/-/_. <span
+                                            class="text-accent dark:text-accent font-bold"> !!!Пробел нельзя ставить!!!</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </label>
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                              viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 correct_icon" id="username-icon">
+                             stroke="currentColor" class="correct_icon" id="username-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963
                       0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12
@@ -46,15 +68,14 @@
                     </div>
 
                     <input type="text" id="username-input" name="username"
-                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                           class="w-full ps-12 p-2.5 correct_input"
                            placeholder="Придумайте логин">
                 </div>
 
-                <p id="username-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
-                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                <p id="username-error" class="hidden error_message">
+                    Поле не должно быть пустым.
                 </p>
             </div>
-
 
             <div>
                 <label for="first-name-input"
@@ -64,12 +85,12 @@
                 </label>
 
                 <input type="text" id="first-name-input" name="first_name"
-                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                       class="w-full ps-4 p-2.5 correct_input"
                        placeholder="Имя"
                 >
 
-                <p id="first-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
-                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                <p id="first-name-error" class="hidden error_message">
+                    Поле не должно быть пустым.
                 </p>
             </div>
 
@@ -81,12 +102,12 @@
                 </label>
 
                 <input type="text" id="last-name-input" name="last_name"
-                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                       class="w-full ps-4 p-2.5 correct_input"
                        placeholder="Фамилия"
                 >
 
-                <p id="last-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
-                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+                <p id="last-name-error" class="hidden error_message">
+                    Поле не должно быть пустым.
                 </p>
             </div>
 
@@ -109,8 +130,13 @@
 
                             <!-- Tooltip -->
                             <div
-                                    class="absolute right-0 bottom-full mb-1 w-auto whitespace-nowrap p-2 text-center text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
+                                    class="absolute right-0 bottom-full mb-1 w-sm whitespace-normal p-2 text-justify text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto  transition-opacity duration-300 z-10">
                                 Номер телефона нужен для восстановления пароля.
+                                Это не обязательно ваш реальный номер,
+                                но в случае если вы забыли пароль,
+                                то нужно будет для восстановления указать ваш логин и
+                                пароль для сброса и установки нового пароля!
+                                <span class="text-accent dark:text-accent-dark">!!!СМС на ваш номер не пришлют!!!</span>
                             </div>
                         </div>
                     </div>
@@ -118,7 +144,7 @@
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 correct_icon"
+                             stroke="currentColor" class="correct_icon"
                              id="phone_number-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3"></path>
@@ -129,12 +155,12 @@
                             type="tel"
                             id="phone_number-input"
                             name="phone_number"
-                            placeholder="+7 (___) ___-__-__"
-                            class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                            placeholder="+7 (999) 999-99-99"
+                            class="w-full ps-12 p-2.5 correct_input"
                     >
                 </div>
                 <!-- блок ошибки -->
-                <p id="phone_number-error" class="w-85 break-normal text-sm pt-2 pl-5 hidden shadow-lg error_message">
+                <p id="phone_number-error" class="hidden error_message">
                     Введите корректный номер телефона.
                 </p>
             </div>
@@ -145,19 +171,19 @@
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 correct_icon"
+                             stroke="currentColor" class="correct_icon"
                              id="password1-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
                         </svg>
                     </div>
                     <input type="password" id="password1-input" name="password1"
-                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                           class="w-full ps-12 p-2.5 correct_input"
                            placeholder="Пароль"
                     >
                 </div>
                 <!-- блок ошибки -->
-                <p id="password1-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
+                <p id="password1-error" class="hidden error_message">
                     Придумайте пароль длиннее 5 символов.
                 </p>
             </div>
@@ -169,19 +195,19 @@
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 correct_icon"
+                             stroke="currentColor" class="correct_icon"
                              id="password2-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
                         </svg>
                     </div>
                     <input type="password" id="password2-input" name="password2"
-                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
+                           class="w-full ps-12 p-2.5 correct_input"
                            placeholder="Повторить ввод пароля"
                     >
                 </div>
                 <!-- блок ошибки -->
-                <p id="password2-error" class="break-normal w-64 text-sm pt-2 pl-5 hidden shadow-lg error_message">
+                <p id="password2-error" class="hidden error_message">
                     Кожаный, будь внимательнее! Пароли не совпали.
                 </p>
             </div>
@@ -197,9 +223,9 @@
                 </button>
             </div>
 
-            <p class="text-center text-sm text-text-light dark:text-text-dark">
+            <p class="text-center text-sm text-text dark:text-text-dark">
                 Уже есть аккаунт?
-                <a href="{% url 'myauth:login' %}" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
+                <a href="{% url 'myauth:login' %}" class="text-primary dark:text-primary-dark hover:underline">Войти</a>
             </p>
         </form>
     </main>
