--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -18,14 +18,14 @@
         <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     {% endif %}
 </head>
-<body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
+<body class="bg-background dark:bg-background-dark transition-all duration-300 font-base">
 
 <header>
-    <nav class="bg-nav-ligth dark:bg-nav-dark p-5 shadow-xl shadow-nav-ligth/50 dark:shadow-nav-dark:50 transition-colors duration-300">
+    <nav class="nav-style">
 
-        <div class="flex justify-between items-center">
+        <div class="flex justify-around items-center">
             <!-- Левая часть -->
-            <div class="flex items-center gap-5 pl-5 ">
+            <div class="flex items-center gap-5">
                 {% if VITE_DEV_MODE %}
                     <img src="http://localhost:5173/src/file_creator/img/file_creator_eating.ico" alt="Логотип"
                          class="h-30 w-30 animate-bounce">
@@ -34,22 +34,22 @@
                          class="h-30 w-30 animate-bounce">
                 {% endif %}
 
-                <h1 class="text-text-light dark:text-text-dark text-5xl font-semibold font-logo">Lazy Ilia</h1>
+                <h1>Lazy Ilia</h1>
             </div>
 
             <!-- Меню (десктоп) -->
-            <div class="hidden lg:flex items-center gap-5">
+            <div class="hidden lg:flex items-center gap-2">
                 <a href="{% url 'file_creator:file-creator-start' %}"
-                   class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Главная</a>
+                class="a-style">Главная</a>
                 <a href="#"
-                   class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Города</a>
+                class="a-style">Города</a>
                 <a href="#"
-                   class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Статистика</a>
+                class="a-style">Статистика</a>
                 <!-- Форма для выхода -->
                 <form action="{% url 'myauth:logout' %}" method="POST" class="inline">
                     {% csrf_token %}
                     <button type="submit"
-                            class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-hover-text-dark">
+                            class="a-style">
                         Выход
                     </button>
                 </form>
@@ -57,29 +57,27 @@
 
 
             <!-- Кнопки справа -->
-            <div class="flex items-center">
+            <div class="flex items-center gap-5">
+                <!-- Бургер (моб) -->
+                <button id="burger-menu"
+                        class="relative flex flex-col justify-between items-center p-2 h-12 w-16 lg:hidden group hover:scale-110">
+                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-10 ease-in-out group-[.open]:rotate-45  origin-center  group-[.open]:translate-y-[15px]"></span>
+                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-10 ease-in-out group-[.open]:hidden "></span>
+                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-10 ease-in-out group-[.open]:-rotate-45 origin-center  group-[.open]:-translate-y-[15px]"></span>
+
+                </button>
                 <!-- Переключатель темы -->
-                <button id="theme-toggle" class="text-yellow-500 dark:text-yellow-400 p-4 h-20 w-20">
+                <button id="theme-toggle" class="theme-toggle-nav">
                     <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
                          fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                         stroke="currentColor" class="w-10 h-10 hidden">
+                         stroke="currentColor" class="w-8 h-8 hidden">
                         <path stroke-linecap="round" stroke-linejoin="round"
                               d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
                     </svg>
-                    <svg id="theme-toggle-light-icon" class="w-10 h-10 hidden" xmlns="http://www.w3.org/2000/svg"
+                    <svg id="theme-toggle-light-icon" class="w-8 h-8 hidden" xmlns="http://www.w3.org/2000/svg"
                          fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round"
                               d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
-                    </svg>
-                </button>
-
-                <!-- Бургер (моб) -->
-                <button id="burger-menu" class="text-gray-700 dark:text-white p-4 h-20 w-20 lg:hidden">
-
-                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                 </button>
             </div>
@@ -89,16 +87,16 @@
         <div id="nav-menu"
              class="flex-col space-y-2 mt-8 lg:hidden max-h-0 overflow-hidden transition-all duration-400 block ">
             <a href="{% url 'file_creator:file-creator-start' %}"
-               class="text-gray-800 dark:text-gray-200 pl-5 py-2  text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Главная</a>
+               class="burger-button">Главная</a>
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 pl-10 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Города</a>
+               class="burger-button">Города</a>
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 pl-15 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Статистика</a>
+               class="burger-button">Статистика</a>
             <!-- Форма для выхода -->
             <form action="{% url 'myauth:logout' %}" method="POST" class="block">
                 {% csrf_token %}
                 <button type="submit"
-                        class=" block w-full h-full text-left pl-30 py-2 text-gray-800 dark:text-gray-200 text-xl font-medium  rounded hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-white transition-colors">
+                        class="burger-button">
                     Выход
                 </button>
             </form>
@@ -109,7 +107,7 @@
 </header>
 <!-- Элемент с иконкой загрузки (крутящийся логотип) -->
 <div id="loader"
-     class="fixed inset-0 flex justify-center items-center bg-white z-50 opacity-100 transition-opacity duration-2000">
+     class="loader">
     <img src="
 {% if VITE_DEV_MODE %}
 http://localhost:5173/src/file_creator/img/file_creator_eating.ico
