--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -6,56 +6,118 @@
 {% endblock %}
 
 {% block body %}
-    <ol class="py-6 items-center w-full space-y-4 lg:flex lg:justify-between lg:space-x-8 lg:space-y-0">
-        <li class="flex items-center text-blue-600 dark:text-blue-500 space-x-2.5">
-        <span class="flex items-center justify-center w-8 h-8 border border-blue-600 rounded-full shrink-0 dark:border-blue-500">
-            1
-        </span>
+    <ol id="steps-list" class="py-6 items-center w-full space-y-4 lg:flex lg:justify-between lg:space-x-8 lg:space-y-0">
+        <li class="step li-style" data-step="1">
+            <span>1</span>
             <div>
                 <h3 class="font-medium leading-tight">Загрузка файлов</h3>
                 <p class="text-sm">Добавление файлов на обработку</p>
             </div>
         </li>
-        <li class="flex items-center text-gray-500 dark:text-gray-400 space-x-2.5">
-        <span class="flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">
-            2
-        </span>
+        <li class="step flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 cursor-pointer" data-step="2">
+            <span class="step-circle flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">2</span>
             <div>
                 <h3 class="font-medium leading-tight">Подготовка</h3>
                 <p class="text-sm">Добавление нужных реквизитов к документам</p>
             </div>
         </li>
-        <li class="flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 ">
-        <span class="flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">
-            3
-        </span>
+        <li class="step flex items-center text-blue-600 dark:text-blue-500 space-x-2.5 cursor-pointer" data-step="1">
+            <span class="step-circle flex items-center justify-center w-8 h-8 border border-blue-600 rounded-full shrink-0 dark:border-blue-500">3</span>
             <div>
                 <h3 class="font-medium leading-tight">Ответ от сервера</h3>
                 <p class="text-sm">Проверка полученных документов от сервера</p>
             </div>
         </li>
-        <li class="flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 ">
-        <span class="flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">
-            4
-        </span>
+        <li class="step flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 cursor-pointer" data-step="2">
+            <span class="step-circle flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">4</span>
             <div>
                 <h3 class="font-medium leading-tight">Сохранение документов</h3>
                 <p class="text-sm">Сохранение документов</p>
             </div>
         </li>
-        <li class="flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 ">
-        <span class="flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">
-            5
-        </span>
+        <li class="step flex items-center text-blue-600 dark:text-blue-500 space-x-2.5 cursor-pointer" data-step="1">
+            <span class="step-circle flex items-center justify-center w-8 h-8 border border-blue-600 rounded-full shrink-0 dark:border-blue-500">5</span>
             <div>
                 <h3 class="font-medium leading-tight">Ожидание ответа от сервера</h3>
                 <p class="text-sm">Обработка сообщения от сервера</p>
             </div>
         </li>
+
     </ol>
+
+    <!-- Блок формы -->
+    <div id="step1-form"
+         class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3">
+        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Загрузка файлов</h2>
+        <p class="text-md text-text dark:text-text-dark font-medium">Сначало нужно выбрать файлы, которые необходимо
+            обработать. </p>
+        <!-- Форма загрузки файлов сюда -->
+        <form method="post" enctype="multipart/form-data" class="flex flex-col gap-5 ">
+            {% csrf_token %}
+            <!-- Загрузка файлов -->
+            <div>
+                <label for="files" class="correct_label text-md mb-3 block">Выберите
+                    документы
+                    (.doc, .docx, .rtf)</label>
+                <input type="file" name="files" id="files" accept=".doc,.docx,.rtf" multiple required
+                       class="correct_input">
+            </div>
+
+            <!-- Начальный номер -->
+            <div>
+
+                <label for="start_number" class="correct_label">Начальный
+                    номер</label>
+                <input type="number" name="start_number" id="start_number" required
+                       class="correct_input">
+            </div>
+
+            <!-- Тип оборудования -->
+            <div>
+                <label for="device_type" class="correct_label">
+                    Вид оборудования
+                </label>
+                <select name="device_type" id="device_type" required
+                        class="correct_input">
+                    <option value="" disabled selected>Выберите тип оборудования</option>
+                    <option value="notebook">Ноутбук</option>
+                    <option value="monitor">Монитор</option>
+                    <option value="printer">Принтер</option>
+                    <option value="scanner">Сканер</option>
+                    <option value="mfp">МФУ (многофункциональное устройство)</option>
+                    <option value="other">Другое</option>
+                </select>
+            </div>
+
+            <!-- Чекбокс "одинаковые номера" -->
+            <div class="flex justify-start items-center gap-5">
+                <input id="same_number" name="same_number" type="checkbox"
+                       class="correct_icon rounded-full text-xl">
+                <label for="same_number" class="correct_label text-md">Основной и
+                    подписной номер одинаковы</label>
+            </div>
+
+            <div>
+                <!-- Кнопка -->
+                <button type="submit"
+                        class="btn-submit">
+                    Загрузить
+                </button>
+            </div>
+        </form>
+    </div>
+
+
+
+
+
 
 
 {% endblock %}
 {% block extra_js %}
-
+    {% if VITE_DEV_MODE %}
+        <script type="module" src="http://localhost:5173/src/file_creator/js/upload.js"></script>
+    {% else %}
+        <script type="module" crossorigin src="{% static 'file_creator/js/upload.js' %}"></script>
+    {% endif %}
 {% endblock %}
